Better exception handle, support custom config file